app/public/css/controller.css
* {
    cursor: none;
}

body {
    margin: 0;
    padding: 0;
    background-color: black;
    font-family: "IBM Plex Sans", sans-serif;
    color: white;
}

/* Screens */
main {
    height: 100vh;
    width: 100vw;
    position: relative;
}

.screen {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: black;
    overflow: hidden;
}


/* Start Screen */
.start-screen {
    z-index: 30;
    padding: 6rem;
    box-sizing: border-box;
}

.start-screen .logo-wrapper {
    display: flex;
    justify-content: center;
    margin-bottom: 2rem;
}

.start-screen h1 {
    text-align: center;
    font-size: 5vh;
}

.start-screen section {
    display: flex;
    justify-content: space-between;
}

.start-screen section div {
    width: 45%;
}

.start-screen section p {
    text-align: justify;
    font-size: 3vh;
}

.start-screen>p {
    text-align: center;
    font-size: 3vh;
}

/* Cam Preview */

.game-screen {
    z-index: 20;
    display: flex;
    width: 100vw;
    height: 100vh;
    position: relative;
    justify-content: end;
    align-items: flex-end;
}

.game-screen aside {
    padding: 2rem 4rem;
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.33);
    height: fit-content;
    width: 100%;
}

.game-screen aside > div {
    display: flex;
    justify-content: space-between;
    gap: 4rem;
}

.game-screen section {
    display: flex;
    gap: 1rem;
    text-wrap: nowrap;
}


.game-screen h1 {
    font-size: 50px;
}

.game-screen h2, .game-screen p {
    font-size: 30px;
    font-weight: normal;
    margin: 0;
}

.game-screen p {
    font-weight: bold;
    font-family: "IBM Plex Mono", serif;
}

/* Live counter */
.live-time {
    width: fit-content;
    display: flex;
    gap: 2rem;
}

.live-time span {
    color: var(--red);
    font-size: 50px;
    font-weight: bold;
}

.live-time p {
    font-size: 50px;
}



/* Cameras */
.game-screen #cameras {
    overflow: hidden;
    position: absolute;
    width: 100vw;
    height: 100vh;
    z-index: -1;
}
#cameras #countdown {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 10vh;
    font-family: "IBM Plex Mono", serif;
}

#cameras.running video.selected {
    opacity: 1;
    z-index: 10;
}

#cameras video {
    opacity: 0;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    /*transition: opacity 0.5s;*/
}



/* End Screen */
.end-screen {
    z-index: 40;
    padding: 50px;
    box-sizing: border-box;
    background-color: var(--red);
    position: absolute;
    display: none;
}

.end-screen #highscore {
    position: absolute;
    bottom: 8rem;
    left: 50%;
    transform: translateX(-50%);
    font-size: 2rem;
}

.end-screen h1 {
    text-align: center;
    font-size: 5vh;
}

.end-screen .logo-wrapper {
    position: absolute;
    top: 100px;
    left: 50%;
    transform: translateX(-50%);
}

.end-screen section {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: black;
}

.end-screen h2 {
    font-size: 200px;
    margin: 0;
}

.end-screen h3 {
    font-size: 50px;
    margin: 0;
}

